Assignment 1 (Seongjun Lee)

--- a/rmarkdown_practice.Rmd
+++ b/rmarkdown_practice.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment 1: R Markdown practice"
-author: "FirstName LastName"
+author: "Seongjun Lee"
 date: "`r Sys.Date()`"
 documentclass: article
 geometry: margin=1in
@@ -26,7 +26,42 @@ urlcolor: blue
 ---
 
 <!-- Write your Markdown below this line -->
+**1 How the course works**
+
+The weekly interactive tutorials must be completed by the start of each week. Then each weekly assignment will be due at the end of the week 
+
+**2 Course Goals**
+
+By the end of the course, students will be able to :
+
+* Use [GitHub](https://github.com) for creating a reproducible research document.
+
+    -My GitHub username is: *slee284*
+
+* Obtain,clean,transform, and visualize a dataset using the R programming language. 
+
+* Interpret and predict dataset trends using statistical inference and models.
+
+* Critically examine and interpret statistical claims reported in mass media. 
+
+**3 Including Code**
+
+**3.1 Running R code in a code chunk**
+```{r}
+x<-2+2
+x+3
+```
 
 
+The output of first line of code is not printed out because it is assigned to a variable instead.
+
+The second line of output is printed out instead, but this means that the calculated value has not been saved for future use.
+
+**3.2 Displaying Graphs**
+
+```{r}
+ggplot2::qplot(data = iris,x=Sepal.Length, y=Sepal.Width)
+
+```
 
 
